# wat-lsp

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-docs.sh  build-extension.sh  build.rs  example.wat  test_block_labels.wat  test_references.wat
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  instructions.md
docs/examples/: exceptions.wat  gc_advanced.wat  strings_data.wat  tables.wat
examples/: gc_structs.wat  imports_exports.wat  multi_value.wat  numeric_ops.wat  reference_types.wat  simd.wat  tail_calls.wat  threads_atomics.wat  trapping.wat  typed_funcref.wat
grammars/tree-sitter-wat/: .gitignore  LICENSE  NOTICE.md  grammar.js  package-lock.json
playground/: index.html  main.js  package-lock.json  package.json  playwright.config.js  style.css  vite.config.js  wat-language.js  wat_lsp_rust.js
playground/tests/: lsp.spec.js
scripts/: build-docs.sh  build-extension.sh
src/: completion.rs  definition.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  parser.rs  references.rs  signature.rs  symbol_lookup.rs  symbols.rs  tree_sitter_bindings.rs  ts_facade.rs  utils.rs  wast_parser.rs
src/completion/: tests.rs
src/core/: mod.rs  types.rs
src/definition/: tests.rs
src/diagnostics/: instruction_metadata.rs  mod.rs  semantic_diagnostics.rs  tree_sitter_diagnostics.rs  wast_validator.rs
src/features/: mod.rs
src/features/completion/: mod.rs  tests.rs
src/features/definition/: mod.rs  tests.rs
src/features/hover/: mod.rs  tests.rs
src/features/references/: tests.rs
src/features/signature/: mod.rs  tests.rs
src/features/symbols/: mod.rs  tests.rs
src/hover/: tests.rs  tests.rs.bak2
src/native/: adapters.rs  mod.rs
src/parser/: tests.rs
src/references/: tests.rs
src/signature/: tests.rs
src/symbols/: tests.rs
src/wasm/: api.rs  mod.rs
tests/: incremental_parsing.rs  integration_tests.rs  large_file_performance.rs  phase5_grammar_test.rs  rename_tests.rs
tree-sitter-wasm/: Cargo.toml  grammar.js  package-lock.json  test.wat
tree-sitter-wasm/queries/: highlights.scm
vscode-extension/: .vscodeignore  package.json
vscode-extension/src/: extension.ts  semanticTokensProvider.ts
vscode-extension/syntaxes/: wat.tmLanguage.json
