[package]
name = "wat-lsp-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "wat_lsp_rust"
path = "src/lib.rs"

[[bin]]
name = "wat-lsp-rust"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
once_cell = "1.19"
regex = "1.10"
tree-sitter = "0.26"

[build-dependencies]
cc = "1.0"
