[package]
name = "wat-lsp-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "wat_lsp_rust"
path = "src/lib.rs"

[[bin]]
name = "wat-lsp-rust"
path = "src/main.rs"

[[bin]]
name = "wat-check"
path = "src/bin/wat-check.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1"
once_cell = "1.19"
regex = "1.10"
tree-sitter = "0.26"
wast = "243.0"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1.0"
