[package]
name = "wat-lsp-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "wat_lsp_rust"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wat-lsp-rust"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "wat-check"
path = "src/bin/wat-check.rs"
required-features = ["native"]

[[bin]]
name = "wat-hover"
path = "src/bin/wat-hover.rs"
required-features = ["native"]

[features]
default = ["native"]
native = [
    "dep:tower-lsp",
    "dep:tokio",
    "dep:tree-sitter",
    "dep:dashmap",
    "dep:clap",
]
wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:js-sys",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen-futures",
]

[dependencies]
# Core dependencies (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
regex = "1.10"
wast = "243.0"

# Native-only dependencies
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time"], optional = true }
tree-sitter = { version = "0.26", optional = true }
dashmap = { version = "6.1", optional = true }
clap = { version = "4", features = ["derive"], optional = true }

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
cc = "1.0"
